--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="row">
 
                 <div class="col-md-6">
-                    <h1>Alex Vidal</h1>
+                    <h1>Kian Farooghi</h1>
                     <div class="page-scroll">
                         <p class="job-title">ًWeb Scrapping Expert</p>
                         <a href="#contact" class="btn btn-fill ">Hire me</a>
