--- a/index.html
+++ b/index.html
@@ -123,35 +123,49 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="skill">
-                            <h4>Html/css</h4>
+                            <h4>Python</h4>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="100"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                         <div class="skill">
-                            <h4>Python</h4>
+                            <h4>Selenium Webdriver(Python)</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="75"></div><!-- /.progress-bar -->
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="100"></div><!-- /.progress-bar -->
+                            </div><!-- /.progress -->
+                        </div><!-- /.skill -->
+                        <div class="skill">
+                            <h4>Beautifulsoup</h4>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="100"></div><!-- /.progress-bar -->
+                            </div><!-- /.progress -->
+                        </div><!-- /.skill -->
+                        <div class="skill">
+                            <h4>Scrappy</h4>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="100"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                     </div>
                     <div class="col-md-4">
+                        
                         <div class="skill">
-                            <h4>Javascript</h4>
+                            <h4>C#</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="82"></div><!-- /.progress-bar -->
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="95"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                         <div class="skill">
-                            <h4>Ruby</h4>
+                            <h4>Selenium Webdriver(C#)</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="66"></div><!-- /.progress-bar -->
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="100"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
+                        
                     </div>
                     <div class="col-md-4">
                         <div class="skill">
-                            <h4>Php</h4>
+                            <h4>C Sharp</h4>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="97"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
