--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="100"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
+                        <div class="skill">
+                            <h4>Windows form applications</h4>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="100"></div><!-- /.progress-bar -->
+                            </div><!-- /.progress -->
+                        </div><!-- /.skill -->
                         
                     </div>
                     <div class="col-md-4">
