--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
                         <div class="portfolio-item">
                             <img src="assets/img/Portfolio-1.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>Project1</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="#"><span class="glyphicon glyphicon-link"></span></a>
+                                <!--<a href="#"><span class="glyphicon glyphicon-link"></span></a> -->
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
@@ -226,9 +226,9 @@
                         <div class="portfolio-item">
                             <img src="assets/img/Portfolio-2.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>Project2</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="#"><span class="glyphicon glyphicon-link"></span></a>
+                                <!--<a href="#"><span class="glyphicon glyphicon-link"></span></a>-->
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
@@ -236,9 +236,9 @@
                         <div class="portfolio-item">
                             <img src="assets/img/Portfolio-3.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>Project Title3</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="#"><span class="glyphicon glyphicon-link"></span></a>
+                                <!--<a href="#"><span class="glyphicon glyphicon-link"></span></a>-->
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
@@ -246,9 +246,9 @@
                         <div class="portfolio-item">
                             <img src="assets/img/Portfolio-4.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>Project4</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="#"><span class="glyphicon glyphicon-link"></span></a>
+                                <!--<a href="#"><span class="glyphicon glyphicon-link"></span></a>-->
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
@@ -256,9 +256,9 @@
                         <div class="portfolio-item">
                             <img src="assets/img/Portfolio-5.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>Project5</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="#"><span class="glyphicon glyphicon-link"></span></a>
+                                <!--<a href="#"><span class="glyphicon glyphicon-link"></span></a>-->
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
@@ -266,9 +266,9 @@
                         <div class="portfolio-item">
                             <img src="assets/img/Portfolio-6.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>Project6</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="#"><span class="glyphicon glyphicon-link"></span></a>
+                                <!--<a href="#"><span class="glyphicon glyphicon-link"></span></a>-->
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
