--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/Portfolio-1.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project1</h4>
+                                <h4>E-commerce Product Data Scraping from Amazon</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <!--<a href="#"><span class="glyphicon glyphicon-link"></span></a> -->
                             </div><!-- /.portfolio-item-info -->
@@ -347,8 +347,16 @@
             <img class="img-res" src="assets/img/Portfolio-1.jpg" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Project title</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo finibus tristique. Maecenas dignissim condimentum sem eu tincidunt. Curabitur in dui quis magna vestibulum pulvinar a ut urna. Nam pellentesque mattis urna. Aenean eget lectus sit amet turpis facilisis consectetur quis vel ante. Integer in massa ut nibh ultricies sagittis imperdiet in ante. Nam sed turpis vel ante placerat feugiat ac tempus magna. Nam aliquet ullamcorper dolor non hendrerit.</p>
+            <h4 class="modal-title">E-commerce Product Data Scraping from Amazon</h4>
+            <p>🔹 Project Description:
+Our client, a market research firm, needed to collect product data from Amazon for a wide range of products. Collecting data manually was time-consuming and inefficient, and Amazon's anti-scraping measures posed a challenge to collecting data. Therefore, we proposed building a custom web scraping tool to automate the process.
+
+
+
+
+🔹 Solution:
+We built a web scraping tool that extracted accurate and reliable product data from Amazon at scale. The tool collected data on product names, prices, descriptions, ratings, and reviews, and stored it in a structured format for easy analysis. The client was able to set up automated data collection, gain valuable insights, and make informed business decisions. The tool reduced the potential for human error and enabled the client to collect data at scale.
+</p>
           </div>
           <div class="modal-footer">
            <!-- <a href="#" class="btn btn-fill">Visit Page</a> -->
