--- a/index.html
+++ b/index.html
@@ -348,13 +348,13 @@
           </div>
           <div class="modal-body">
             <h4 class="modal-title">E-commerce Product Data Scraping from Amazon</h4>
-            <p>🔹 Project Description:
+            <p>🔹 Project Description: <br>
 Our client, a market research firm, needed to collect product data from Amazon for a wide range of products. Collecting data manually was time-consuming and inefficient, and Amazon's anti-scraping measures posed a challenge to collecting data. Therefore, we proposed building a custom web scraping tool to automate the process.
 
 
 
-
-🔹 Solution:
+ <br>
+🔹 Solution: <br>
 We built a web scraping tool that extracted accurate and reliable product data from Amazon at scale. The tool collected data on product names, prices, descriptions, ratings, and reviews, and stored it in a structured format for easy analysis. The client was able to set up automated data collection, gain valuable insights, and make informed business decisions. The tool reduced the potential for human error and enabled the client to collect data at scale.
 </p>
           </div>
