--- a/index.html
+++ b/index.html
@@ -314,20 +314,10 @@
                     </div>
                     <button href="#" class="btn btn-border" type="submit">Hire Me <span class="glyphicon glyphicon-send"></span></button>
                 </form>-->
-                <form action="send_email.php" method="POST">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <input type="text" name="name" class="form-control mt-x-0" placeholder="Name" required>
-                        </div>
-                        <div class="col-sm-6">
-                            <input type="email" name="email" class="form-control" placeholder="Email" required>   
-                        </div>
-                        <div class="col-sm-12">
-                            <textarea name="message" id="message" class="form-control" placeholder="Message" required></textarea>
-                        </div>
-                    </div>
-                    <button class="btn btn-border" type="submit">Hire Me <span class="glyphicon glyphicon-send"></span></button>
-                </form>
+                
+                <p>Telegram: <a href="https://t.me/mytelegramuser">@Kian_webscrapper</a> <br>
+                    Email: kian.fa.business@gmail.com</p>
+                
             </div>
         </section><!-- /.section-form -->
 
