what i do update

--- a/index.html
+++ b/index.html
@@ -183,22 +183,22 @@
                     <div class="col-sm-4">
                         <div class="service">
                             <img src="assets/img/front-end.svg" alt="Front End Developer">
-                            <h4>Front-end</h4>
-                            <p>As a javascript developer, I have experience in HTML5 and CSS3 techniques working with jQuery or more advanced javascript MVC frameworks such as angular</p>
+                            <h4>Web Scraping and Data Mining Specialist</h4>
+                            <p>Utilizing automated techniques to extract relevant data from websites, web scraping enables efficient data acquisition for analysis, research, and decision-making, unlocking valuable insights and competitive advantages.</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
                             <img src="assets/img/back-end.svg" alt="Back End Developer">
-                            <h4>Back-end</h4>
-                            <p>Utilising php frameworks such as Zend or creating bespoke code, I've written services supporting thousands of users, including REST APIs, e-learning applications and more.</p>
+                            <h4>Data Collection and Analysis Expert</h4>
+                            <p>The systematic process of gathering, organizing, and consolidating diverse datasets from various sources, data collection ensures comprehensive and accurate information for analysis, reporting, and deriving actionable insights to drive informed decision-making.</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
                             <img src="assets/img/consultancy.svg" alt="Coding">
-                            <h4>Consultancy</h4>
-                            <p>As well as providing development services, I can also help you decide strategic roadmaps via consultancy services.</p>
+                            <h4>Web Scraping Consultant</h4>
+                            <p>Providing specialized expertise and guidance in web scraping methodologies and data collection strategies, consultancy services offer valuable insights, best practices, and tailored solutions to optimize data acquisition processes and leverage data effectively for business growth and competitive advantage.</p>
                         </div><!-- /.service -->
                     </div>
                 </div>
