--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/Portfolio-1.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>E-commerce Product Data Scraping from Amazon</h4>
+                                <h4>Project 1</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <!--<a href="#"><span class="glyphicon glyphicon-link"></span></a> -->
                             </div><!-- /.portfolio-item-info -->
@@ -226,7 +226,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/Portfolio-2.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project2</h4>
+                                <h4>Project 2</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <!--<a href="#"><span class="glyphicon glyphicon-link"></span></a>-->
                             </div><!-- /.portfolio-item-info -->
@@ -236,7 +236,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/Portfolio-3.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title3</h4>
+                                <h4>Project 3</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <!--<a href="#"><span class="glyphicon glyphicon-link"></span></a>-->
                             </div><!-- /.portfolio-item-info -->
@@ -246,7 +246,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/Portfolio-4.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project4</h4>
+                                <h4>Project 4</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <!--<a href="#"><span class="glyphicon glyphicon-link"></span></a>-->
                             </div><!-- /.portfolio-item-info -->
@@ -256,7 +256,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/Portfolio-5.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project5</h4>
+                                <h4>Project 5</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <!--<a href="#"><span class="glyphicon glyphicon-link"></span></a>-->
                             </div><!-- /.portfolio-item-info -->
@@ -266,7 +266,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/Portfolio-6.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project6</h4>
+                                <h4>Project 6</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <!--<a href="#"><span class="glyphicon glyphicon-link"></span></a>-->
                             </div><!-- /.portfolio-item-info -->
@@ -351,7 +351,7 @@
             <img class="img-res" src="assets/img/Portfolio-1.jpg" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">E-commerce Product Data Scraping from Amazon</h4>
+            <h4 class="modal-title">Scraping E-commerce Product Data from Amazon</h4>
             <p>🔹 Project Description: <br>
 Our client, a market research firm, needed to collect product data from Amazon for a wide range of products. Collecting data manually was time-consuming and inefficient, and Amazon's anti-scraping measures posed a challenge to collecting data. Therefore, we proposed building a custom web scraping tool to automate the process.
 
@@ -378,7 +378,9 @@ We built a web scraping tool that extracted accurate and reliable product data f
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Project title</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo finibus tristique. Maecenas dignissim condimentum sem eu tincidunt. Curabitur in dui quis magna vestibulum pulvinar a ut urna. Nam pellentesque mattis urna. Aenean eget lectus sit amet turpis facilisis consectetur quis vel ante. Integer in massa ut nibh ultricies sagittis imperdiet in ante. Nam sed turpis vel ante placerat feugiat ac tempus magna. Nam aliquet ullamcorper dolor non hendrerit.</p>
+            <p> 
+                XXXXXXXXXXXXXXXXXXXXXXXXXXXX
+            </p>
           </div>
           <div class="modal-footer">
            <!--  <a href="#" class="btn btn-fill">Visit Page</a> -->
@@ -395,8 +397,28 @@ We built a web scraping tool that extracted accurate and reliable product data f
             <img class="img-res" src="assets/img/Portfolio-3.jpg" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Project title</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo finibus tristique. Maecenas dignissim condimentum sem eu tincidunt. Curabitur in dui quis magna vestibulum pulvinar a ut urna. Nam pellentesque mattis urna. Aenean eget lectus sit amet turpis facilisis consectetur quis vel ante. Integer in massa ut nibh ultricies sagittis imperdiet in ante. Nam sed turpis vel ante placerat feugiat ac tempus magna. Nam aliquet ullamcorper dolor non hendrerit.</p>
+            <h4 class="modal-title">Scraping comments on Google Play</h4>
+            <p>
+                🔹 Project Description: <br>
+                 A marketing agency, needed collectibg user reviews from
+                Google Play to analyse customer sentiment and improve brand reputation. Manually
+                collecting reviews from Google Play was a time-consuming and
+                inefficient process, and the client needed a faster and more reliable
+                solution. Therefore, I proposed building a custom web scraping
+                tool to automate the data collection process.
+                <br>
+                🔹 Solution:
+                I built a web scraping tool that extracted user reviews from Google Play. The tool
+                collected data on user reviews, ratings, dates, and other relevant
+                information, and stored it in a structured format for easy analysis. The
+                client was able to set up automated data collection and receive alerts
+                for new user reviews that matched their criteria. The tool reduced the
+                potential for human error and enabled the client to collect data at
+                scale, gain valuable insights, and improve brand reputation by
+                addressing customer concerns. <br>
+
+
+            </p>
           </div>
           <div class="modal-footer">
            <!--  <a href="#" class="btn btn-fill">Visit Page</a> -->
