--- a/index.html
+++ b/index.html
@@ -377,9 +377,14 @@ We built a web scraping tool that extracted accurate and reliable product data f
             <img class="img-res" src="assets/img/Portfolio-2.jpg" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Project title</h4>
+            <h4 class="modal-title">Extracting job listings from job boards</h4>
             <p> 
-                XXXXXXXXXXXXXXXXXXXXXXXXXXXX
+                🔹 Project Description: <br>
+Our client, a recruiting agency, needed to collect job listings from multiple job boards to analyze job trends and find suitable candidates for their clients. Manually collecting job listings from each job board was a time-consuming and inefficient process, and the client needed a faster and more reliable solution. Therefore, we proposed building a custom web scraping tool to automate the data collection process.
+<br>
+🔹 Solution: <br>
+We built a web scraping tool that extracted job listings from multiple job boards such as Indeed, Glassdoor, and LinkedIn. The tool collected data on job titles, descriptions, locations, salaries, and other relevant information, and stored it in a structured format for easy analysis. The client was able to set up automated data collection and receive alerts for new job postings that matched their criteria. The tool reduced the potential for human error and enabled the client to collect data at scale, gain valuable insights, and find suitable candidates for their clients.
+
             </p>
           </div>
           <div class="modal-footer">
@@ -407,7 +412,7 @@ We built a web scraping tool that extracted accurate and reliable product data f
                 solution. Therefore, I proposed building a custom web scraping
                 tool to automate the data collection process.
                 <br>
-                🔹 Solution:
+                🔹 Solution:<br>
                 I built a web scraping tool that extracted user reviews from Google Play. The tool
                 collected data on user reviews, ratings, dates, and other relevant
                 information, and stored it in a structured format for easy analysis. The
@@ -435,8 +440,15 @@ We built a web scraping tool that extracted accurate and reliable product data f
             <img class="img-res" src="assets/img/Portfolio-4.jpg" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Project title</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo finibus tristique. Maecenas dignissim condimentum sem eu tincidunt. Curabitur in dui quis magna vestibulum pulvinar a ut urna. Nam pellentesque mattis urna. Aenean eget lectus sit amet turpis facilisis consectetur quis vel ante. Integer in massa ut nibh ultricies sagittis imperdiet in ante. Nam sed turpis vel ante placerat feugiat ac tempus magna. Nam aliquet ullamcorper dolor non hendrerit.</p>
+            <h4 class="modal-title">Scraping financial data of stock market</h4>
+            <p>🔹 Project Description:<br>
+                Our client, an investment firm, needed to collect financial data from stock market websites such as Yahoo Finance and Google Finance to analyze market trends and make informed investment decisions. Collecting data manually was a time-consuming and inefficient process, and the client needed a faster and more reliable solution. Therefore, we proposed building a custom web scraping tool to automate the data collection process.
+                
+                <br>🔹 Solution: <br>
+                We built a web scraping tool that extracted financial data from stock market websites such as Yahoo Finance and Google Finance. The tool collected data on stock prices, market indices, company financials, and other relevant information, and stored it in a structured format for easy analysis. The client was able to set up automated data collection and receive alerts for changes in market trends or specific stocks that matched their criteria. The tool reduced the potential for human error and enabled the client to collect data at scale, gain valuable insights, and make informed investment decisions.
+                <br>
+
+            </p>
           </div>
           <div class="modal-footer">
           <!--   <a href="#" class="btn btn-fill">Visit Page</a> -->
@@ -453,8 +465,16 @@ We built a web scraping tool that extracted accurate and reliable product data f
             <img class="img-res" src="assets/img/Portfolio-5.jpg" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Project title</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo finibus tristique. Maecenas dignissim condimentum sem eu tincidunt. Curabitur in dui quis magna vestibulum pulvinar a ut urna. Nam pellentesque mattis urna. Aenean eget lectus sit amet turpis facilisis consectetur quis vel ante. Integer in massa ut nibh ultricies sagittis imperdiet in ante. Nam sed turpis vel ante placerat feugiat ac tempus magna. Nam aliquet ullamcorper dolor non hendrerit.</p>
+            <h4 class="modal-title">Extracting data from travel websites to analyze prices and availability
+            </h4>
+            <p>
+                🔹 Project Description:<br>
+Our client, a travel agency, needed to collect data from various travel websites such as Expedia, Booking.com, and TripAdvisor to analyze prices and availability of flights, hotels, and rental cars. Collecting data manually was a time-consuming and inefficient process, and the client needed a faster and more reliable solution. Therefore, we proposed building a custom web scraping tool to automate the data collection process.
+<br>
+🔹 Solution:<br>
+We built a web scraping tool that extracted data from various travel websites such as Expedia, Booking.com, and TripAdvisor. The tool collected data on flight, hotel, and rental car prices, availability, ratings, and other relevant information, and stored it in a structured format for easy analysis. The client was able to set up automated data collection and receive alerts for changes in prices or availability that matched their criteria. The tool reduced the potential for human error and enabled the client to collect data at scale, gain valuable insights, and make informed travel arrangements for their clients.
+
+            </p>
           </div>
           <div class="modal-footer">
            <!--  <a href="#" class="btn btn-fill">Visit Page</a> -->
