fix some styles

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
     <title>PortfolioPerfect</title>
 
-    <meta name="description" content="">
+    <meta name="description" content="web scrapper profile">
     <meta name="author" content="">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="web scraping, data collection, portfolio">
 
     <!-- Mobile Specific Metas
     ================================================== -->
@@ -216,7 +216,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/Portfolio-1.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project 1</h4>
+                                <h4>Scraping E-commerce Product Data from Amazon</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <!--<a href="#"><span class="glyphicon glyphicon-link"></span></a> -->
                             </div><!-- /.portfolio-item-info -->
@@ -226,7 +226,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/Portfolio-2.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project 2</h4>
+                                <h4>Extracting job listings from job boards</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <!--<a href="#"><span class="glyphicon glyphicon-link"></span></a>-->
                             </div><!-- /.portfolio-item-info -->
@@ -236,7 +236,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/Portfolio-3.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project 3</h4>
+                                <h4>Scraping comments on Google Play</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <!--<a href="#"><span class="glyphicon glyphicon-link"></span></a>-->
                             </div><!-- /.portfolio-item-info -->
@@ -281,15 +281,15 @@
                 <div class="row">
                     <div class="col-sm-4 col-xs-12">
                         <p class="counter start" data-to="5" data-speed="2000">0</p>
-                        <h4>Years Experience</h4>
+                        <p class="class_white">Years Experience</p>
                     </div>
                     <div class="col-sm-4 col-xs-12">
                         <p class="counter start" data-to="45" data-speed="2000">0</p>       
-                        <h4>Projects Delivered</h4>      
+                        <p class="class_white">Projects Delivered</p>      
                     </div>
                     <div class="col-sm-4 col-xs-12">
                         <p id="infinity" class="counter" data-from="0" data-to="1" data-speed="1000">0</p>
-                        <h4>Seconds on this site!<br>What are you waiting for?</h4>
+                        <p class="class_white">Seconds on this site!<br>What are you waiting for?</p>
                     </div>
                 </div>
             </div>
