--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/photo1_project2.png" class="img-res" alt="">
+                            <img src="assets/img/photo1_project2.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Extracting job listings from job boards</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -261,7 +261,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/photo1_project5.png" class="img-res" alt="">
+                            <img src="assets/img/photo1_project5.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Extracting data from travel websites to analyze prices and availability</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span class="glyphicon glyphicon-eye-open"></span></a>
