--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 <div class="row">
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/photo1_project1.png" class="img-res" alt="">
+                            <img src="assets/img/photo1_project1.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Scraping E-commerce Product Data from Amazon</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -271,7 +271,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/photo1_project6.png" class="img-res" alt="">
+                            <img src="assets/img/photo1_project6.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Scraping user reviews from social media platforms</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span class="glyphicon glyphicon-eye-open"></span></a>
